# dedup

./: Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml
src/: analyze.rs  args.rs  digest.rs  file.rs  hash.rs  hasher.rs  inplace.rs  lib.rs  local.rs  main.rs  modes.rs  remote.rs  size.rs
tests/: file.rs
