[package]
name = "dedup"
version = "0.2.0"
authors = ["Sriharsha Mucheli <harshasrisri@gmail.com>"]
description = "Program to find duplicate files and take care of them"
edition = "2018"

[dependencies]
md-5 = "0.8"
sha-1 = "0.8"
sha2 = "0.8"
digest = "0.8"
walkdir = "2"
structopt = "0.2"
lazy_static = "1.4.0"
anyhow = "1.0"
